[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fstrent_tools"
version = "0.3.7"
authors = [
  { name="FSTrent", email="your.email@example.com" },
]
description = "A collection of Python utility functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.urls]
"Homepage" = "https://github.com/yourusername/fstrent_tools"
"Bug Tracker" = "https://github.com/yourusername/fstrent_tools/issues" 