[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fstrent_tools"
version = "0.5.10"
authors = [
  { name="FSTrent", email="wrmartel3@gmail.com" },
]
description = "A collection of Python utility functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wrm3/fstrent_tools"
"Bug Tracker" = "https://github.com/wrm3/fstrent_tools/issues" 