[metadata]
description_file = README.md

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=src --cov-report=term-missing
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    sound: marks tests that involve sound playback
    windows: marks Windows-specific tests
    linux: marks Linux-specific tests

[isort]
profile = black
multi_line_output = 3